--- a/lcp-types/Cargo.toml
+++ b/lcp-types/Cargo.toml
@@ -8,3 +8,5 @@ license = "MIT"
 
 [dependencies]
 serde = {version = "1", features = ["derive"]}
+chrono = {version = "0.4", features = ["serde"]}
+base64 = "0.13"
