--- a/lcpget/Cargo.toml
+++ b/lcpget/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 serde_json = "1.0"
